--- a/frontend/src/app/choice/choice.component.html
+++ b/frontend/src/app/choice/choice.component.html
@@ -1,1 +1,7 @@
-<p>choice works!</p>
+<div class="choice-box">
+  <p>Choose Your Project's Type</p>
+  <div class="choice-container">
+    <button (click)="selectChoice('di')">DI</button>
+    <button (click)="selectChoice('tr')">TR</button>
+  </div>
+</div>
