--- a/frontend/src/app/responsible/responsible.component.css
+++ b/frontend/src/app/responsible/responsible.component.css
@@ -65,3 +65,8 @@ button {
 button:hover {
   background-color: rgb(20, 37, 145);
 }
+.error-message {
+  color: red; 
+  margin-top: 2px; 
+  margin-bottom: 10px;
+}
