--- a/frontend/src/app/responsible/responsible.component.html
+++ b/frontend/src/app/responsible/responsible.component.html
@@ -1,13 +1,10 @@
 <div class="responsible-box">
-  <p>Enter Responsible Email and Message</p>
+  <p>Enter Responsible Email</p>
   <div class="responsible-container">
     <div class="email-box">
       <input type="email" [(ngModel)]="email" placeholder="Enter email" required>
     </div>
-    <div class="message-box">
-      <textarea [(ngModel)]="message" placeholder="Enter message"></textarea>
-    </div>
+    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
   </div>
   <button (click)="validateInputs()">Send</button>
 </div>
-
